--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <title>Monkal Shop - Интернет-магазин уникальной одежды</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mode line</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  <meta name="description" content="Откройте для себя эксклюзивную коллекцию одежды, обуви и аксессуаров в интернет-магазине Monkal Shop. Быстрая доставка по всей стране." />
+
+  <meta name="keywords" content="Monkal Shop, купить одежду, интернет-магазин, мода, стиль, аксессуары" />
+
+  <meta property="og:title" content="Monkal Shop - Интернет-магазин уникальной одежды" />
+  <meta property="og:description" content="Эксклюзивная коллекция одежды, обуви и аксессуаров с быстрой доставкой." />
+  <meta property="og:type" content="website" />
+
+  <link rel="icon" type="image/png" href="/assets/monkal.icon.png" />
+
+</head>
+<body>
+<div id="root"></div>
+<script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
