--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
   <link rel="icon" type="image/png" href="/assets/monkal.icon.png" />
 
+
+  <meta name="google-site-verification" content="6EH3MGHO9EJl9ytQcHGkCvjMLNWcrwbPCQRDrUP6VA0" />
+
 </head>
 <body>
 <div id="root"></div>
